# logilib

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_FR.md  Readme.md  TODO  adder.v  build_config.cmake  cmp.v  compil.sh  configure_env.sh  gate.v  logilib.core  logilib_proto  merde.sh  merde.sh~  mkdocs.yml  multigate.v  multiplexeur.v  out.v  reg.v  yosys.tcl
cosim/: CMakeLists.txt  main.cpp  main.h  main.hpp  main.v  settings.ini  utils.cpp  utils.h
cosim/alu/: CMakeLists.txt  alu.cpp  alu.h
cosim/alu/arithm/: CMakeLists.txt  arithm.cpp  arithm.h
cosim/alu/arithm/add_sub/: CMakeLists.txt  add_sub.cpp  add_sub.h  add_sub_includes.h  add_sub_macros.h  add_sub_template.h  add_sub_test.cpp  add_sub_test.h
cosim/alu/arithm/addx/: CMakeLists.txt  addx.cpp  addx.h  addx_includes.h  addx_macros.h  addx_template.h  addx_test.cpp  addx_test.h
cosim/cmake/: environment.cmake
cosim/exemple/: CMakeLists.txt  bru-tests.cpp  bru-utils.hpp
cosim/exemple/alu/: CMakeLists.txt
cosim/exemple/alu/bru/: bru-tests.cpp  bru-utils.cpp  main-tests.cpp
cosim/memory/: CMakeLists.txt  memory.cpp
cosim/memory/dlatch/: CMakeLists.txt  Dlatch-utils.cpp  Dlatch-utils.hpp  Dlatch.cpp  Dlatch_pre.cpp  Dlatch_rst.cpp  Dlatch_rst_pre.cpp  main-tests.cpp  memory.hpp
cosim/memory/latch/: CMakeLists.txt  latch.cpp  latch.h
cosim/primitive/: CMakeLists.txt  parallel_gate.cpp  primitive.cpp  primitive.h  primitive.hpp
cosim/primitive/gate/: CMakeLists.txt  gate-tests.cpp.in  gate-utils.cpp  gate-utils.hpp  gate.cpp  gate.h  gate.hpp  gate_includes.h  gate_macros.h  gate_macros.hpp  gate_template.h  gate_template.hpp  gate_utils.cpp  gate_utils.h  gate_utils.hpp  gates.cpp.in  gates.hpp.in  main-tests.cpp  test_and.cpp  test_buf.cpp  test_nand.cpp  test_nor.cpp  test_not.cpp  test_or.cpp  test_xor.cpp
cosim/primitive/gate/parallel/: CMakeLists.txt  parallel_gate.cpp
cosim/primitive/parallel_gate/: CMakeLists.txt  parallel_gate.cpp  parallel_gate.h
cosim/tensor/: CMakeLists.txt  README.md  cosim_tensor.cpp  cosim_tensor_28x28.cpp  cosim_tensor_9x9.cpp  main.cpp
cosim/tools/: CMakeLists.txt  logs.cpp  logs.h
cosim/utils/: logs.cpp
src/: CMakeLists.txt
src/alu/: Readme.md
src/alu/arithm/: CMakeLists.txt  TODO  add.v  addX.v  add_sub.v  brent-kung.v  cmp.v  cmp8.v  divmod2.v  mult.v  multX.v  mult_cell.v
src/alu/arithm/test/: test_add.v
src/alu/logic/: sll.v  slt.v  sltu.v  sra_srl.v
src/bus/: axi.v  axi_bench.v  axi_reg.v  reg.v
src/bus/axi_lite/: README.md  axi4-lite.graphml  block.md  master.old.v  master.v  master_bench.v  ordre  slave.v  test_proto.v
src/bus/axi_lite/svg/: master.old.v
src/compteur/: TODO  bit_cpt3.v  counter.py~  cpt_bin.v
src/compteur/test/: test_bit_cpt3.v
src/memory/: CMakeLists.txt
src/memory/Dflipflop/: Dflipflop.v  Dflipflop_pre.v  Dflipflop_pre_rst.v  Dflipflop_rst.v  Dflipflop_rst_pre.v
src/memory/Dflipflop/parallel_Dflipflop/: parallel_Dflipflop.v  parallel_Dflipflop_pre.v  parallel_Dflipflop_rst.v  parallel_Dflipflop_rst_pre.v
src/memory/Dflipflop/serial_Dflipflop/: serial_Dflipflop.v  serial_Dflipflop_pre.v  serial_Dflipflop_rst.v  serial_Dflipflop_rst_pre.v
src/memory/Dlatch/: CMakeLists.txt  Dlatch.v  Dlatch_pre.v  Dlatch_rst.v  Dlatch_rst_pre.v  parallel_Dlatch.v  parallel_Dlatch_rst.v  serial_Dlatch.v  serial_Dlatch_rst.v
src/memory/Dlatch/parallel_Dlatch/: parallel_Dlatch.v  parallel_Dlatch_pre.v  parallel_Dlatch_rst.v  parallel_Dlatch_rst.v~  parallel_Dlatch_rst_pre.v
src/memory/Dlatch/serial_Dlatch/: serial_Dlatch.v  serial_Dlatch_pre.v  serial_Dlatch_rst.v  serial_Dlatch_rst_pre.v
src/memory/JKlatch/: JKlatch_rst.v  serial_JKlatch_rst.v
src/memory/dflipflop/: CMakeLists.txt  Dflipflop.v  Dflipflop_pre.v  Dflipflop_rst.v  Dflipflop_rst_pre.v
src/memory/dflipflop/parallel/: parallel_Dflipflop.v  parallel_Dflipflop_pre.v  parallel_Dflipflop_rst.v  parallel_Dflipflop_rst_pre.v
src/memory/dflipflop/serial/: serial_Dflipflop.v  serial_Dflipflop_pre.v  serial_Dflipflop_rst.v  serial_Dflipflop_rst_pre.v
src/memory/dlatch/: CMakeLists.txt  Dlatch.v  Dlatch_pre.v  Dlatch_rst.v  Dlatch_rst_pre.v
src/memory/dlatch/parallel/: parallel_Dlatch.v  parallel_Dlatch_pre.v  parallel_Dlatch_rst.v  parallel_Dlatch_rst_pre.v
src/memory/dlatch/serial/: serial_Dlatch.v  serial_Dlatch_pre.v  serial_Dlatch_rst.v  serial_Dlatch_rst_pre.v
src/memory/jklatch/: JKlatch_rst.v  serial_JKlatch_rst.v
src/primitive/: CMakeLists.txt
src/primitive/gate/: CMakeLists.txt  gate-tests.cpp.in  gate-utils.cpp  gate_and.v  gate_buf.v  gate_nand.v  gate_nor.v  gate_not.v  gate_or.v  gate_xnor.v  gate_xor.v
src/primitive/gate/complex/: complex_gate.v
src/primitive/gate/header/: gate.v~
src/primitive/gate/multi_gate/: multi_or.v
src/primitive/gate/parallel/: parallel_and.v  parallel_nand.v  parallel_nor.v  parallel_or.v  parallel_xnor.v  parallel_xor.v
src/primitive/gate/parallel_gate/: parallel_and.v  parallel_nand.v  parallel_nor.v  parallel_or.v  parallel_xnor.v  parallel_xor.v
src/primitive/gate/serial/: serial_buf.v  (+3 more)
src/primitive/parallel_gate/: parallel_and.v  parallel_buf.v  parallel_nand.v  parallel_nor.v  parallel_not.v  parallel_or.v  parallel_xnor.v  parallel_xor.v
src/primitive/serial_gate/: TODO  serial_and.v  serial_buf.v  serial_nand.v  serial_nor.v  serial_not.v  serial_or.v  serial_xnor.v  serial_xor.v  sim
src/routing/: TODO  bin_to_dec.v  decalleur_LR.v  demux.v  encoder.v  fragmented_replicator.v  log2.vh  mux.v  replicator.v  shuffle.v
src/routing/src/: decalleur_LR.v  demux.v  mux.v  replicator.v
src/routing/test/: test_decaleur_LR.v  test_demux.v  test_demux8.v  test_mux.v  test_mux8.v  test_mux_8bitx2.v  test_recurse_demux.v
src/tensor/: CMakeLists.txt  README.md  README_FR.md  acc.v  adder_tree.v  mmul.v  mult.v  on_border.v  on_center.v  on_coin.v  tensor.v  test.v
src/tensor/tmp/: flatten_recursive.py
src/type/: double.v  fadd.v  float.v
veriform/alu/arithm/: CMakeLists.txt  add_sub.c  verif_arithm.h
(+659 files in other folders)
